# omni-logger

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-30-omni-logger.md  2026-05-07-refactor-init-py.md
docs/superpowers/specs/: 2026-04-30-omni-logger-design.md  2026-05-07-refactor-init-py-design.md
omni_logger/: __init__.py  config.py  logger_setup.py
omni_logger/handlers/: __init__.py  console.py  dingtalk.py  file.py
omni_logger/utils/: __init__.py  validation.py
tests/: conftest.py  test_api.py  test_config.py  test_console_handler.py  test_dingtalk_handler.py  test_file_handler.py  test_handler_registry.py  test_integration.py  test_validation.py
